# Aminder_backend

./: .gitignore  config.example.yaml  main.py  pyproject.toml
core/: config.py  database.py
core/ai_provider/: __init__.py  base.py  factory.py  gemini.py  litellm_provider.py  openai.py
modules/auth/: manager.py  models.py  router.py  schemas.py  security.py
modules/chat/: router.py  schemas.py  service.py
modules/personas/: personal.py  router.py  schemas.py
utils/: logger.py
